refactored questionnairerespones and pandefinitions
